kubernetes/inactive/nextcloud/nextcloud-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.213
  selector:
    app: nextcloud
  ports:
  - name: nextcloud
    port: 80
    targetPort: 80
    protocol: TCP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:stable
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/www/html
        - name: backups
          mountPath: /backups
        - name: media
          mountPath: /media
      volumes:
      - name: data
        nfs:
          server: gimli.home
          path: /appdata/nextcloud
      - name: backups
        nfs:
          server: gimli.home
          path: /tank/backup
      - name: media
        nfs:
          server: gimli.home
          path: /media/media
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cloud.lester.network
    secretName: nextcloud-tls
  rules:
  - host: cloud.lester.network
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud
          servicePort: 80
